--- a/Dockerfile.mlflow
+++ b/Dockerfile.mlflow
@@ -1,19 +1,21 @@
-# Dockerfile.mlflow
-FROM python:3.10-slim
+FROM python:3.9-slim
 
-# Instalar dependências do sistema necessárias
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    gcc \
-    libpq-dev && \
-    rm -rf /var/lib/apt/lists/*
+# Install required system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Instalar MLflow e dependências
+# Install specific MLflow version and dependencies
 RUN pip install --no-cache-dir \
-    mlflow==2.9.2 \
+    mlflow==2.8.1 \
+    boto3 \
     psycopg2-binary \
-    boto3
+    scikit-learn \
+    pandas \
+    numpy
 
 EXPOSE 5000
 
-CMD ["mlflow", "server", "--host", "0.0.0.0", "--port", "5000"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5000 || exit 1
